--- a/po/lg.po
+++ b/po/lg.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-24 18:07+0000\n"
+"PO-Revision-Date: 2014-01-26 21:19+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1390586870.0\n"
+"X-POOTLE-MTIME: 1390771158.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -798,7 +798,7 @@ msgstr "B_ikkuza"
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "K_wata (ma)kubo"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -839,7 +839,7 @@ msgstr "Twala mu _Bisuulidwa"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Akakwatakifo k'etterekero lino gyekali."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -939,7 +939,7 @@ msgstr "Obusangiro"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Ekyongerwako"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -1211,6 +1211,8 @@ msgstr ""
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
 msgstr ""
+"<b>Omukolo ogw'oku fayiro gwazzemu ebitali bituufu nga "
+"tegunnayimirizibwa.</b> "
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
@@ -1279,7 +1281,7 @@ msgstr "<b>Egende mu:</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:600
 msgid "Creating links to files"
-msgstr ""
+msgstr "Nkolawo nyunzi ezigguka ku fayiro"
 
 #. translators: it is part of "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:607
@@ -1303,7 +1305,7 @@ msgstr "%s fayiro"
 
 #: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Waliwo ebikolebwa ku fayiro...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:633
