--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-26 13:44+0000\n"
+"PO-Revision-Date: 2014-01-27 10:05+0000\n"
 "Last-Translator: Julien <Julius22@laposte.net>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1390743852.0\n"
+"X-POOTLE-MTIME: 1390817108.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1516,7 +1516,7 @@ msgstr "Opération non supportée"
 
 #: ../src/modules/vfs-menu.c:1394
 msgid "Invalid menu directory"
-msgstr "Menu de dossier invalide"
+msgstr "Répertoire de menu invalide"
 
 #: ../src/modules/vfs-menu.c:1457 ../src/modules/vfs-menu.c:1736
 msgid "Menu item name cannot be empty"
@@ -1574,7 +1574,8 @@ msgstr "Impossible de créer l'élément de menu « %s »"
 
 #: ../src/modules/vfs-menu.c:2572
 msgid "Name of menu directory should not end with \".desktop\""
-msgstr "Le nom du dossier de menu ne devrait pas se terminer par « .desktop »"
+msgstr ""
+"Le nom du répertoire de menu ne devrait pas se terminer par « .desktop »"
 
 #: ../src/modules/vfs-menu.c:2617
 msgid "Invalid operation with menu root"
@@ -1614,7 +1615,7 @@ msgstr "<b>Co_mmande :</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:288
 msgid "Command to execute when the application icon is activated"
-msgstr ""
+msgstr "Commande à exécuter lorsque l'icône de l'application est active"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:322
 msgid "<b>D_escription:</b>"
@@ -1628,22 +1629,21 @@ msgstr "Nom générique de l'application"
 #: ../src/modules/gtk-fileprop-x-desktop.c:340
 #, fuzzy
 msgid "<b>_Working directory:</b>"
-msgstr "<b>_Propriétaire :</b>"
+msgstr "<b>Répertoire de travail :</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:351
 msgid "The working directory to run the program in"
-msgstr ""
+msgstr "Le répertoire de travail dans lequel exécuter le programme"
 
 # Vérifier la lettre pour le raccourci clavier
 #: ../src/modules/gtk-fileprop-x-desktop.c:359
 #, fuzzy
 msgid "<b>_Tooltip:</b>"
-msgstr "<b>Vers :</b>"
+msgstr "<b>Infobulle :</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:369
-#, fuzzy
 msgid "Tooltip to show on application"
-msgstr "Choisissez une application"
+msgstr "Infobulle à afficher sur l'application"
 
 #. TODO: handle "TryExec" field ?
 #. row 7: "StartupNotify" GtkCheckButton
@@ -1653,9 +1653,8 @@ msgstr "_Utiliser la notification de démarrage"
 
 # Vérifier la lettre pour le raccourci clavier
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
-msgstr "Bureau"
+msgstr "Entrée _de bureau"
 
 #: ../src/modules/gtk-menu-trash.c:72
 msgid "_Restore"
@@ -1663,176 +1662,176 @@ msgstr "_Restaurer"
 
 #: ../src/modules/gtk-menu-trash.c:73
 msgid "Restore trashed files to original paths"
-msgstr "Restaurer les fichiers à leurs emplacements d'_origine"
+msgstr "Restaurer les fichiers à leurs emplacements d'origine"
 
 #: ../src/tools/lxshortcut.c:42
 msgid "source file name or desktop id"
-msgstr ""
+msgstr "Nom de fichier source ou identifiant de bureau"
 
 #: ../src/tools/lxshortcut.c:42
 msgid "SOURCE"
-msgstr ""
+msgstr "SOURCE"
 
 #: ../src/tools/lxshortcut.c:43
 msgid "result file name"
-msgstr ""
+msgstr "Nom de fichier de résultat"
 
 #: ../src/tools/lxshortcut.c:43
 msgid "RESULT"
-msgstr ""
+msgstr "RÉSULTAT"
 
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr "CD-ROM"
+msgstr "Disque CD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr "CD-ROM vierge"
+msgstr "Disque CD-ROM vierge"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr "CD-R"
+msgstr "Disque CD-R"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr "CD-R vierge"
+msgstr "Disque CD-R vierge"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr "CD-RW"
+msgstr "Disque CD-RW"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr "CD-RW vierge"
+msgstr "Disque CD-RW vierge"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr "DVD-ROM"
+msgstr "Disque DVD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr "DVD-ROM vierge"
+msgstr "Disque DVD-ROM vierge"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr "DVD-RW"
+msgstr "Disque DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr "DVD-RW vierge"
+msgstr "Disque DVD-RW vierge"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr "DVD-RAM"
+msgstr "Disque DVD-RAM"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr "DVD-RAM vierge"
+msgstr "Disque DVD-RAM vierge"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr "DVD+R"
+msgstr "Disque DVD+R"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr "DVD+R vierge"
+msgstr "Disque DVD+R vierge"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr "DVD+RW"
+msgstr "Disque DVD+RW"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr "DVD+RW vierge"
+msgstr "Disque DVD+RW vierge"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr "DVD+R DL"
+msgstr "Disque DVD+R DL"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr "DVD+R DL vierge"
+msgstr "Disque DVD+R DL vierge"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr "DVD+RW DL"
+msgstr "Disque DVD+RW DL"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr "DVD+RW DL vierge"
+msgstr "Disque DVD+RW DL vierge"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr "Blu-Ray"
+msgstr "Disque Blu-Ray"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr "Blu-Ray vierge"
+msgstr "Disque Blu-Ray vierge"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr "Blu-Ray R"
+msgstr "Disque Blu-Ray R"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr "Blu-Ray R vierge"
+msgstr "Disque Blu-Ray R vierge"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr "Blu-Ray RW"
+msgstr "Disque Blu-Ray RW"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr "Blu-Ray RW vierge"
+msgstr "Disque Blu-Ray RW vierge"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr "HD DVD"
+msgstr "Disque HD DVD"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr "HD DVD vierge"
+msgstr "Disque HD DVD vierge"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr "HD DVD-R"
+msgstr "Disque HD DVD-R"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr "HD DVD-R vierge"
+msgstr "Disque HD DVD-R vierge"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr "HD DVD-RW"
+msgstr "Disque HD DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr "HD DVD-RW vierge"
+msgstr "Disque HD DVD-RW vierge"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr "MO"
+msgstr "Disque MO"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr "MO vierge"
+msgstr "Disque MO vierge"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr "MRW"
+msgstr "Disque MRW"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr "MRW vierge"
+msgstr "Disque MRW vierge"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr "MRW/W"
+msgstr "Disque MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr "MRW/W vierge"
+msgstr "Disque MRW/W vierge"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
