--- a/po/nl.po
+++ b/po/nl.po
@@ -2,13 +2,12 @@
 # Copyright (C) the author of the libfm package.
 # This file is distributed under the same license as the libfm package.
 # Pjotr, 2011.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2014-01-05 11:24+0000\n"
+"POT-Creation-Date: 2014-01-11 15:20+0200\n"
+"PO-Revision-Date: 2014-01-14 16:19+0000\n"
 "Last-Translator: Pjotr <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -17,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1388921079.0\n"
+"X-POOTLE-MTIME: 1389716394.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -26,6 +25,8 @@ msgstr "Voorkeurstoepassingen"
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
+"Kies toepassingen die worden aangeroepen bij een klik op een webkoppeling of "
+"e-mailadres"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Shortcut Editor"
@@ -370,6 +371,8 @@ msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
+"Patroon mag oftewel een POSIX-schilpatroonlijst zijn (met ',' als "
+"scheidingsteken) oftewel een POSIX-reguliere uitdrukking."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -429,13 +432,16 @@ msgstr "Map"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "Overig:"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
 msgstr ""
+"Elke geldige inhoudssoort kan hier worden ingevoerd. Jokerteken '*' is "
+"toegestaan aan het einde van de soort. Meerdere soorten moeten worden "
+"gescheiden door ';'."
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -779,7 +785,7 @@ msgstr "Openen _met..."
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Pad(en) kopiëren"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -820,7 +826,7 @@ msgstr "Verplaats naar prullenbak"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Uw bladwijzers bevatten reeds een bladwijzer voor deze map."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -829,13 +835,13 @@ msgstr "Afbeeldingbestanden"
 #: ../src/gtk/fm-file-properties.c:494 ../src/gtk/fm-file-properties.c:503
 msgid "byte"
 msgid_plural "bytes"
-msgstr[0] "%u byte"
-msgstr[1] "%u bytes"
+msgstr[0] "byte"
+msgstr[1] "bytes"
 
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "bezig met doorzoeken... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -850,7 +856,8 @@ msgstr "Gelieve een geldige groepsnaam of numerieke ID in te voeren."
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr ""
-"Wilt u deze veranderingen recursief toepassen op alle bestanden en submappen?"
+"Wilt u deze veranderingen recursief toepassen op alle bestanden en "
+"submappen?"
 
 #: ../src/gtk/fm-file-properties.c:960
 msgid "Hide or unhide the file"
@@ -877,15 +884,15 @@ msgstr "Aan het laden..."
 msgid "<b>_Access content:</b>"
 msgstr "<b>Inhoud benaderen:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1242
+#: ../src/gtk/fm-file-properties.c:1239
 msgid "Files of different types"
 msgstr "Bestanden van verschillende types"
 
-#: ../src/gtk/fm-file-properties.c:1286
+#: ../src/gtk/fm-file-properties.c:1283
 msgid "<b>File:</b>"
 msgstr "<b>Bestand:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1352
+#: ../src/gtk/fm-file-properties.c:1349
 msgid "Multiple files"
 msgstr "Meerdere bestanden"
 
@@ -920,7 +927,7 @@ msgstr "Locatie"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Extensie"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -1189,7 +1196,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>Er traden fouten op voordat de bestandbewerking werd gestaakt.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
@@ -1226,58 +1233,71 @@ msgid ", "
 msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:579
+#: ../src/gtk/fm-progress-dlg.c:581
 msgid "Moving"
 msgstr "Bestanden verplaatsen"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:583
+#: ../src/gtk/fm-progress-dlg.c:585
 msgid "Copying"
 msgstr "Bestanden kopiëren"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:587
+#: ../src/gtk/fm-progress-dlg.c:589
 msgid "Trashing"
 msgstr "Bestanden weggooien"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:591
+#: ../src/gtk/fm-progress-dlg.c:593
 msgid "Deleting"
 msgstr "Bestanden verwijderen"
 
-#. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:595
-msgid "Symlinking"
-msgstr ""
+#. translators: it is part of "Creating link /path/xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:597
+msgid "Creating link"
+msgstr "Koppeling maken"
 
-#. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:602
+#. translators: 'In:' string is followed by destination folder path
+#: ../src/gtk/fm-progress-dlg.c:599
+msgid "<b>In:</b>"
+msgstr "<b>In:</b>"
+
+#: ../src/gtk/fm-progress-dlg.c:600
+msgid "Creating links to files"
+msgstr "Koppelingen naar bestanden aan het maken"
+
+#. translators: it is part of "Changing attributes of xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:607
 msgid "Changing attributes of"
 msgstr "Bestandeigenschappen veranderen"
 
+#: ../src/gtk/fm-progress-dlg.c:608
+msgid "Changing attributes of files"
+msgstr "Bestandeigenschappen aan het veranderen"
+
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:606
+#: ../src/gtk/fm-progress-dlg.c:614
 msgid "Restoring"
 msgstr "Herstellen"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:613
+#: ../src/gtk/fm-progress-dlg.c:624
 #, c-format
 msgid "%s files"
 msgstr "Afbeeldingbestanden"
 
-#: ../src/gtk/fm-progress-dlg.c:615
+#: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Bestandbewerking is in gang gezet...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
-#: ../src/gtk/fm-progress-dlg.c:619
+#: ../src/gtk/fm-progress-dlg.c:633
 #, c-format
 msgid "<b>%s file:</b>"
 msgstr "<b>Bestandtype:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:622
+#: ../src/gtk/fm-progress-dlg.c:636
 #, c-format
 msgid "<b>%s files:</b>"
 msgstr "<b>Bestandtype:</b>"
@@ -1750,6 +1770,9 @@ msgstr "Lege optische schijf"
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
 msgstr "Optische schijf"
+
+#~ msgid "Symlinking"
+#~ msgstr "Symbolische koppelingen maken"
 
 #, fuzzy
 #~ msgid "<b>File type to be opened:</b>"
