Add fallback icons "folder" and "unknown" for case if no theme can be reached.
See http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=734691 bugreport:
if there is no gnome icon theme but no theme was selected by user then GTK
cannot use any. Providing own last-resort icons will solve that problem.

Icons supplied are taken from lxde-icon-theme package - 48x48 sized ones.

--- a/NEWS
+++ b/NEWS
@@ -389,6 +389,9 @@ Changes on 1.2.0 since 1.1.0:
 * Search dialog options are remembered now between searches. Search path
     and 'Properties' tab are not saved though.
 
+* Added fallback icons for folder and file in case if no usable theme was
+    set in user GTK environment.
+
 * A whole lot of bugfixes.
 
 
