--- a/po/bg.po
+++ b/po/bg.po
@@ -2,14 +2,14 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <rec_ku@hotmail.com>, 2010.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-11-09 13:37+0000\n"
+"POT-Creation-Date: 2014-01-11 15:20+0200\n"
+"PO-Revision-Date: 2014-02-12 10:28+0000\n"
 "Last-Translator: Радослав <reckku@gmail.com>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
 "X-Poedit-Bookmarks: -1,59,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-POOTLE-MTIME: 1384004233.0\n"
+"X-POOTLE-MTIME: 1392200908.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -26,6 +26,8 @@ msgstr "Предпочитани програми"
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
+"Изберете приложенията, които да се извикват при клик на Уеб връзка или имейл "
+"адрес."
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Shortcut Editor"
@@ -36,18 +38,16 @@ msgid "Create new or change existing desktop entry"
 msgstr "Създаване на нов или промяна на съществуващия запис на работния плот"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
-msgstr "Избери приложение"
+msgstr "Изберете приложение"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "Use selected application to open files"
 msgstr "Използвайте избраното приложение за отваряне на файлове"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Applications"
-msgstr "_Инсталирано приложение"
+msgstr "_Инсталирани приложения"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>C_ommand line to execute:</b>"
@@ -98,14 +98,12 @@ msgid "C_ustom Command Line"
 msgstr "П_отребителска команда"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
 msgstr "_Задай маркираното приложение по подразбиране за този вид файл"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
-msgstr "Потвърдете, за да замените файловете"
+msgstr "Потвърдете заменянето на файла"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
@@ -134,7 +132,6 @@ msgid "with the following file?"
 msgstr "с този файл?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
 msgstr "Име на _файл:"
 
@@ -189,7 +186,6 @@ msgid "<b>Target file:</b>"
 msgstr "<b>Обект:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
 msgstr "<b>Вид файл:</b>"
 
@@ -202,34 +198,28 @@ msgid "Select the application used to open files of this type "
 msgstr "Изберете приложение за отваряне на файлове от същия тип"
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total count of files:</b>"
-msgstr "<b>Максимален размер:</b>"
+msgstr "<b>Общ брой файлове:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Total size of files:</b>"
-msgstr "<b>Максимален размер:</b>"
+msgstr "<b>Общ размер на файловете:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Size on disk:</b>"
-msgstr "<b>Заема на диска:</b>"
+msgstr "<b>Място на диска:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last modification:</b>"
-msgstr "<b>Последня промяна:</b>"
+msgstr "<b>Последна промяна:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last access:</b>"
-msgstr "<b>Последен допуск:</b>"
+msgstr "<b>Последен достъп:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
-msgstr "<b>Промяна на останалите права:</b>"
+msgstr "<b>Последна промяна на правата:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
 msgid "_General"
@@ -300,7 +290,6 @@ msgid "None"
 msgstr "Няма"
 
 #: ../data/ui/file-prop.glade.h:32
-#, fuzzy
 msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
@@ -316,7 +305,6 @@ msgid "Sticky & set GID"
 msgstr "Прилепване и задаване на Номер на групата"
 
 #: ../data/ui/file-prop.glade.h:35
-#, fuzzy
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
 msgstr "Задаване на Номер на потребителя"
@@ -326,7 +314,6 @@ msgid "Set UID & GID"
 msgstr "Задаване на Номер на потребителя и групата"
 
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
 msgctxt ""
 "this is a file access mode - only owner can access the file, for others "
 "access is denied"
@@ -362,7 +349,6 @@ msgid "GB"
 msgstr "ГБ"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
 msgstr "Изберете дата"
 
@@ -383,6 +369,8 @@ msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
+"Шаблонът може да бъде POSIX списък с обвивка (с разделител ',') или POSIX "
+"регулярен израз."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -437,19 +425,21 @@ msgid "_Documents"
 msgstr "_Документи"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "Folde_rs"
-msgstr "Папка"
+msgstr "Па_пки"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "Дру_го:"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
 msgstr ""
+"Тук може да бъде въведено всеки тип валидно съдържание. Позволени са "
+"заместващи знаци „*“ в края на вида файл. Множество видове, трябва да са "
+"разделени с „;“."
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -505,12 +495,10 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Предпочитаният Браузър ще се използва за отваряне на скрити връзки."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
-msgstr "<b>Mail клиент</b>"
+msgstr "<b>Пощенски клиент</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
@@ -549,7 +537,6 @@ msgid "<b>Time remaining:</b>"
 msgstr "<b>Оставащо време:</b>"
 
 #: ../data/ui/progress.glade.h:6
-#, fuzzy
 msgid "<b>Errors occurred:</b>"
 msgstr "<b>Настъпиха следните грешки:</b>"
 
@@ -581,7 +568,7 @@ msgstr "Няма зададено стандартно приложение за
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "Устройства"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -693,8 +680,8 @@ msgid ""
 "character without intending to start an entity - escape ampersand as &amp;"
 msgstr ""
 "Заместващата последователност не завършва с „;“. Най-вероятно сте използвали "
-"„&“, без той да е начало на заместваща последователност. Представете го като "
-"„&amp;“"
+"„&“, без той да е начало на заместваща последователност. Представете го "
+"като „&amp;“"
 
 #: ../src/extra/fm-xml-file.c:594
 msgid "Space isn't allowed in the close tag"
@@ -719,7 +706,8 @@ msgstr "Неправилен знак „%c“ в началото на стой
 #, c-format
 msgid "Invalid char '%c' at end of attribute value, expected '%c'"
 msgstr ""
-"Неправилен знак „%c“ в края на стойността на атрибута, очакваният знак е „%c“"
+"Неправилен знак „%c“ в края на стойността на атрибута, очакваният знак е „%"
+"c“"
 
 #: ../src/extra/fm-xml-file.c:834
 msgid "Document ended unexpectedly"
@@ -738,18 +726,17 @@ msgid "Customize"
 msgstr "Промени"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
-#, fuzzy, c-format
+#, c-format, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
-msgstr "Използвайте избраното приложение за отваряне на файлове"
+msgstr "<b>Изберете приложение за отварянето на „%s“ файлове</b>"
 
 #: ../src/gtk/fm-app-menu-view.c:224
 msgid "Installed Applications"
 msgstr "Инсталирани програми"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1211
-#, fuzzy
 msgid "<No subfolders>"
-msgstr "<Няма поддиректория>"
+msgstr "<Няма поддиректории>"
 
 #: ../src/gtk/fm-dir-tree-model.c:422 ../src/gtk/fm-dir-tree-model.c:1212
 msgid "Loading..."
@@ -764,20 +751,17 @@ msgid "_Cancel"
 msgstr "_Отказ"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "_Копиране"
+msgstr "_Копирай тук"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "_Преместване наляво"
+msgstr "_Премести тук"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
-#, fuzzy
 msgid "_Link Here"
-msgstr "_Връзка"
+msgstr "_Създай връзка тук"
 
 #: ../src/gtk/fm-dnd-dest.c:870
 msgid "XDirectSave failed."
@@ -792,13 +776,12 @@ msgid "Open _With..."
 msgstr "Отвори _с..."
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
-msgstr "Отвори _с..."
+msgstr "Отвор_и с..."
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Копирай п_ътя"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -813,9 +796,8 @@ msgid "_Add to Bookmarks"
 msgstr "_Добавяне към отметките"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
-msgstr "_Преименуване"
+msgstr "_Преименувай..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -835,13 +817,12 @@ msgstr "Свой_ства"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "П_реместване надясно"
+msgstr "П_реместви в Коша"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Вече имате направена отметка за тази папка."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -856,7 +837,7 @@ msgstr[1] "байтове"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "сканиране... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -889,24 +870,22 @@ msgstr ""
 "<Ctrl+H> за превключване режима за показване на скрити файлове."
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "Зареждане..."
+msgstr "сканиране..."
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
 msgstr "<b>Достъп_ни:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1242
+#: ../src/gtk/fm-file-properties.c:1239
 msgid "Files of different types"
 msgstr "Различни видове файлове"
 
-#: ../src/gtk/fm-file-properties.c:1286
+#: ../src/gtk/fm-file-properties.c:1283
 msgid "<b>File:</b>"
 msgstr "<b>Вид файл:</b>"
 
-#: ../src/gtk/fm-file-properties.c:1352
-#, fuzzy
+#: ../src/gtk/fm-file-properties.c:1349
 msgid "Multiple files"
 msgstr "Множество файлове"
 
@@ -941,7 +920,7 @@ msgstr "Място"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Разширение"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -964,7 +943,6 @@ msgid "_Sort Files"
 msgstr "Пренаре_ждане на файлове"
 
 #: ../src/gtk/fm-folder-view.c:196
-#, fuzzy
 msgid "_Rename Folder..."
 msgstr "П_реименуване на папка"
 
@@ -978,14 +956,12 @@ msgstr "Показване на с_критите"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
 msgstr "Смесване на _файлове и папки"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
-msgstr "Без _зачитане на главни и малки букви в името"
+msgstr "Пр_енебрегване на главни и малки букви"
 
 #: ../src/gtk/fm-folder-view.c:219
 msgid "By _Name"
@@ -1008,7 +984,6 @@ msgid "Enter a name for the newly created folder:"
 msgstr "Въведете име на новосъздадената папка:"
 
 #: ../src/gtk/fm-folder-view.c:846
-#, fuzzy
 msgid "Creating New Folder"
 msgstr "Създаване на нова папка"
 
@@ -1058,7 +1033,6 @@ msgid "No folders are specified."
 msgstr "Няма избрани папки."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:757 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
 msgstr "Изберете папка"
 
@@ -1115,19 +1089,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Наистина ли искате да изпразните коша?"
 
 #: ../src/gtk/fm-path-entry.c:668
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "П_оставяне и продължаване"
 
 #: ../src/gtk/fm-path-entry.c:727
-#, fuzzy
 msgid "Folder location bar"
-msgstr "Файлови връзки"
+msgstr "Лента с разположение"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "П_реименуване на папка"
+msgstr "Домашна папка"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1139,9 +1110,8 @@ msgid "Applications"
 msgstr "Приложения"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Файлова система"
+msgstr "Коренова папка на файловата система"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1164,7 +1134,6 @@ msgid "_Rename Bookmark Item"
 msgstr "П_реименувай отметката"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
 msgstr "Према_хни от Отметки"
 
@@ -1220,16 +1189,15 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>Възникнаха грешки преди спирането на файловата операция.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "Отказано"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "Операцията е отказана и възникнаха грешки."
+msgstr "<b>Файловата операция приключи с грешки.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1258,67 +1226,74 @@ msgid ", "
 msgstr ", "
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:579
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:581
 msgid "Moving"
-msgstr "Преместване на файлове"
+msgstr "Преместване"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:583
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:585
 msgid "Copying"
-msgstr "Копиране на файлове"
+msgstr "Копиране"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:587
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:589
 msgid "Trashing"
 msgstr "Изхвърляне в коша"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:593
 msgid "Deleting"
-msgstr "Изтриване на файлове"
+msgstr "Изтриване"
 
-#. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:595
-msgid "Symlinking"
-msgstr ""
+#. translators: it is part of "Creating link /path/xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:597
+msgid "Creating link"
+msgstr "Създаване на символна връзка"
 
-#. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:602
-#, fuzzy
+#. translators: 'In:' string is followed by destination folder path
+#: ../src/gtk/fm-progress-dlg.c:599
+msgid "<b>In:</b>"
+msgstr "<b>В(ъв):</b>"
+
+#: ../src/gtk/fm-progress-dlg.c:600
+msgid "Creating links to files"
+msgstr "Създаване на връзки до файлове"
+
+#. translators: it is part of "Changing attributes of xxx.txt"
+#: ../src/gtk/fm-progress-dlg.c:607
 msgid "Changing attributes of"
-msgstr "Промяна на флаговете"
+msgstr "Промени атрибутите на"
+
+#: ../src/gtk/fm-progress-dlg.c:608
+msgid "Changing attributes of files"
+msgstr "Промени атрибутите на файловете"
 
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
-#: ../src/gtk/fm-progress-dlg.c:606
-#, fuzzy
+#: ../src/gtk/fm-progress-dlg.c:614
 msgid "Restoring"
 msgstr "_Възстановяване"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:613
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:624
+#, c-format, c-format
 msgid "%s files"
-msgstr "изображения"
+msgstr "%s файлове"
 
-#: ../src/gtk/fm-progress-dlg.c:615
+#: ../src/gtk/fm-progress-dlg.c:627
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Файловата операция се изпълнява...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
-#: ../src/gtk/fm-progress-dlg.c:619
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:633
+#, c-format, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>Вид файл:</b>"
+msgstr "<b>%s файлове:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
-#: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#: ../src/gtk/fm-progress-dlg.c:636
+#, c-format, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>Вид файл:</b>"
+msgstr "<b>%s файлове:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1354,14 +1329,12 @@ msgid "_Hide %s"
 msgstr "_Скрий %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
-msgstr "_Преместване наляво"
+msgstr "_Премести наляво"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
-msgstr "П_реместване надясно"
+msgstr "П_ремести надясно"
 
 #: ../src/gtk/fm-standard-view.c:868
 #, c-format
@@ -1369,9 +1342,8 @@ msgid "Show %s"
 msgstr "Показване на %s"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
-msgstr "_Забравяне на ширината"
+msgstr "_Забрави ширината"
 
 #: ../src/gtk/fm-standard-view.c:1854
 msgid "_Icon View"
@@ -1557,12 +1529,10 @@ msgid "Search"
 msgstr "Търсене"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
 msgstr "Резултати от търсенето"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Изберете изпълним файл"
 
@@ -1609,9 +1579,8 @@ msgid "_Use startup notification"
 msgstr "Известява_не при стартиране"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
-msgstr "Запис на _работния плот"
+msgstr "Запис на _Работния плот"
 
 #: ../src/modules/gtk-menu-trash.c:72
 msgid "_Restore"
